--- a/weather/src/index.css
+++ b/weather/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(45deg, #eb3349 30%, #f45c43 90%);
+  background-size: cover;
 }
 
 code {
