--- a/weather/src/App.css
+++ b/weather/src/App.css
@@ -97,3 +97,72 @@
     transform: scale(1,1)
   }
 }
+
+/* адаптация под различные устройства */
+@media only screen and (min-width: 600px) {
+  .search-form input {
+    width: 70%;
+  }
+  .search-form button {
+    width: 25%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .search-form input {
+    width: 70%;
+  }
+  .search-form button {
+    width: 25%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .search-form input {
+    width: 80%;
+  }
+  .search-form button {
+    width: 18%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .search-form input {
+    width: 80%;
+  }
+  .search-form button {
+    width: 18%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .search-form input {
+    width: 90%;
+  }
+  .search-form button {
+    width: 8%;
+  }
+}
+
+.temprature h1 {
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.location h3 i {
+  margin-right: 10px;
+  animation: locationicon 2s infinite;
+}
+
+/* работа с иконкой локация */
+@keyframes locationicon {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(360deg)
+  }
+}
