--- a/weather/src/App.css
+++ b/weather/src/App.css
@@ -83,7 +83,7 @@
   font-weight: 800;
 }
 /* работа с иконкой солнышко */
-.main-container .weather-icon i {
+.main-container .weather-icon img {
   font-size: 30px;
   font-weight: 800;
   animation: iconanimation 3s infinite;
