--- a/weather/src/App.css
+++ b/weather/src/App.css
@@ -82,10 +82,10 @@
   font-size: 25px;
   font-weight: 800;
 }
-/* работа с иконкой солнышко */
+/* работа с иконкой погода */
 .main-container .weather-icon img {
-  font-size: 30px;
-  font-weight: 800;
+  width: 100px;
+  height: 100px;
   animation: iconanimation 3s infinite;
 }
 
@@ -165,4 +165,9 @@
   100% {
     transform: rotateY(360deg)
   }
+}
+
+
+.loader-container {
+  margin: 15%;
 }
